# smallpt-rs

./: Cargo.toml
src/: lib.rs
